Fix alignment of unit-list for unit navigation

--- a/apps/frontend/src/app/modules/review/components/unit-nav/unit-nav.component.scss
+++ b/apps/frontend/src/app/modules/review/components/unit-nav/unit-nav.component.scss
@@ -36,8 +36,6 @@
   }
 
   .unit-list {
-    border-bottom: #ddd 1px solid;
-    border-top: #ddd 1px solid;
     box-sizing: border-box;
     display: flex;
     flex-direction: row;
